--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -30,5 +30,5 @@ jobs:
         dotnet nuget push /home/runner/work/SFX.EventAggregation/SFX.EventAggregation/nuget/SFX.EventAggregation.CSharp.1.0.0.nupkg -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }}
     - name: Deploy F# NuGet Package
       run:  
-        dotnet nuget push /home/runner/work/SFX.EventAggregation/SFX.EventAggregation/nuget/SFX.BitHack.1.0.0.nupkg -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }}
+        dotnet nuget push /home/runner/work/SFX.EventAggregation/SFX.EventAggregation/nuget/SFX.EventAggregation.1.0.0.nupkg -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }}
 
