--- a/src/EventAggregation/EventAggregation.fsproj
+++ b/src/EventAggregation/EventAggregation.fsproj
@@ -25,6 +25,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="SFX.ROP" Version="1.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EventAggregation.CSharp\EventAggregation.CSharp.csproj" />
   </ItemGroup>
 
