--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -27,8 +27,8 @@ jobs:
         dotnet pack ./src/EventAggregation/EventAggregation.fsproj --configuration Release -o ./nuget
     - name: Deploy C# NuGet Package
       run: 
-        dotnet nuget push /home/runner/work/SFX.EventAggregation/SFX.EventAggregation/nuget/SFX.EventAggregation.CSharp.1.0.4.nupkg -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }}
+        dotnet nuget push /home/runner/work/SFX.EventAggregation/SFX.EventAggregation/nuget/SFX.EventAggregation.CSharp.*.nupkg -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }}
     - name: Deploy F# NuGet Package
       run:  
-        dotnet nuget push /home/runner/work/SFX.EventAggregation/SFX.EventAggregation/nuget/SFX.EventAggregation.1.0.4.nupkg -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }}
+        dotnet nuget push /home/runner/work/SFX.EventAggregation/SFX.EventAggregation/nuget/SFX.EventAggregation.*.nupkg -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }}
 
